--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
           <h2 class="text-center text-secondary"><strong>Sorry!</strong></h2>
           <h3 class="text-center text-secondary"><strong>No articles found in database.</strong></h3>
         <% } else {%>
-          <table class="table table-striped text-center">
+          <table class="table table-striped">
             <thead>
               <tr class= "table-dark">
                 <th>ID</th>
