--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
     <script>
       $(document).ready(function() {
         $("table").DataTable({
-            order: [0, "desc"]
+            order: [0, "desc"],
         });
       });
     </script>
