about and contact pages added

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,8 +23,8 @@
               <a class="nav-link" href="/"><i class="fas fa-home me-1"></i>Home</a>
             </li>
             <li class="nav-item active"><a class="nav-link" href="/add"><i class="fas fa-sticky-note me-1"></i>Add Article</a></li>
-            <li class="nav-item active"><a class="nav-link" href="#"><i class="fas fa-globe me-1"></i>About</a></li>
-            <li class="nav-item active"><a class="nav-link" href="#"><i class="fas fa-envelope me-1"></i>Contact</a></li>
+            <li class="nav-item active"><a class="nav-link" href="/about"><i class="fas fa-globe me-1"></i>About</a></li>
+            <li class="nav-item active"><a class="nav-link" href="/contact"><i class="fas fa-envelope me-1"></i>Contact</a></li>
           </ul>
         </div>
       </div>
